--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.7.0",
+    "saas": "^1.0.0",
+    "scss": "^0.2.4",
     "stylis": "^4.1.1",
     "stylis-plugin-rtl": "2.0.2",
     "web-vitals": "^1.1.2"
